api/infra/k8/taboo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taboo-minimal-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - secretName: taboo-tls-secret
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taboo-api
                port:
                  number: 8080
